<resources>
    <string name="app_name">K:CLICK</string>
    <string name="title_activity_lecture">강의 추가</string>
    <string name="title_activity_lecture_plan">강의 계획서</string>
    <string name="title_activity_lecture_info">강의 정보</string>

    <string name="activity_lecture_button_condition">강의 조회</string>
    <string name="activity_lecture_button_lecturename">강의명 조회</string>
    <string name="activity_lecture_edittext_lecture">과목번호(4자리) 또는 교과목명 입력</string>
    <string name="activity_lecture_checkbox_people">인원 초과 제외</string>
    <string name="activity_lecture_checkbox_time">시간 중복 제외</string>선택한 시간표
    <string name="activity_lecture_textview_select_timetable">선택한 강의 목록</string>
    <string name="activity_lecture_textview_search_timetable">조회된 강의 목록</string>
    <string name="activity_lecture_textview_not_found">조회된 강의가 없습니다.</string>

    <string name="activity_main_chip_text_1">시간표1</string>
    <string name="activity_main_chip_text_2">시간표2</string>
    <string name="activity_main_chip_text_3">시간표3</string>
    <string name="activity_main_chip_text_4">시간표4</string>
    <string name="activity_main_chip_text_5">시간표5</string>
    <string name="activity_main_timetable_text_monday">월</string>
    <string name="activity_main_timetable_text_tuesday">화</string>
    <string name="activity_main_timetable_text_wednesday">수</string>
    <string name="activity_main_timetable_text_thursday">목</string>
    <string name="activity_main_timetable_text_friday">금</string>
    <string name="title_activity_app_info">앱 정보</string>
    <string name="title_activity_theme_setting">테마 편집</string>
</resources>