<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_timetable_layout"
    android:layout_margin="@dimen/default_layout_margin">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/main_chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:checkedChip="@+id/main_chip_1"
        android:layout_marginBottom="@dimen/default_layout_margin"
        android:theme="@style/Theme.MaterialComponents.Light.Bridge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/main_timetable_scrollview"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/main_chip_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_chip_text_1"
            android:textColor="@color/chip_text_color"
            android:textAppearance="@style/chipTextAppearance"
            app:chipBackgroundColor="@color/chip_background_color"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/main_chip_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_chip_text_2"
            android:textColor="@color/chip_text_color"
            android:textAppearance="@style/chipTextAppearance"
            app:chipBackgroundColor="@color/chip_background_color"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/main_chip_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_chip_text_3"
            android:textAppearance="@style/chipTextAppearance"
            app:chipBackgroundColor="@color/chip_background_color"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/main_chip_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_chip_text_4"
            android:textColor="@color/chip_text_color"
            android:textAppearance="@style/chipTextAppearance"
            app:chipBackgroundColor="@color/chip_background_color"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/main_chip_5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/activity_main_chip_text_5"
            android:textColor="@color/chip_text_color"
            android:textAppearance="@style/chipTextAppearance"
            app:chipBackgroundColor="@color/chip_background_color"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:textAlignment="center" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_timetable_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/main_chip_group"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_timetable_tablelayout"
                    android:stretchColumns="1,2,3,4,5">

                    <TableRow>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="@dimen/timetable_column_text_size"
                            android:background="@drawable/main_table_border" />

                        <TextView
                            android:layout_width="@dimen/timetable_column_width"
                            android:layout_height="match_parent"
                            android:text="@string/activity_main_timetable_text_monday"
                            android:textSize="@dimen/timetable_column_text_size"
                            android:textColor="@color/colorPrimary"
                            android:gravity="center"
                            android:background="@drawable/main_table_border" />

                        <TextView
                            android:layout_width="@dimen/timetable_column_width"
                            android:layout_height="match_parent"
                            android:text="@string/activity_main_timetable_text_tuesday"
                            android:textSize="@dimen/timetable_column_text_size"
                            android:textColor="@color/colorPrimary"
                            android:gravity="center"
                            android:background="@drawable/main_table_border" />

                        <TextView
                            android:layout_width="@dimen/timetable_column_width"
                            android:layout_height="match_parent"
                            android:text="@string/activity_main_timetable_text_wednesday"
                            android:textSize="@dimen/timetable_column_text_size"
                            android:textColor="@color/colorPrimary"
                            android:gravity="center"
                            android:background="@drawable/main_table_border" />

                        <TextView
                            android:layout_width="@dimen/timetable_column_width"
                            android:layout_height="match_parent"
                            android:text="@string/activity_main_timetable_text_thursday"
                            android:textSize="@dimen/timetable_column_text_size"
                            android:textColor="@color/colorPrimary"
                            android:gravity="center"
                            android:background="@drawable/main_table_border" />

                        <TextView
                            android:layout_width="@dimen/timetable_column_width"
                            android:layout_height="match_parent"
                            android:text="@string/activity_main_timetable_text_friday"
                            android:textSize="@dimen/timetable_column_text_size"
                            android:textColor="@color/colorPrimary"
                            android:gravity="center"
                            android:background="@drawable/main_table_border" />
                    </TableRow>
                </TableLayout>

                <AbsoluteLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/main_timetable_absolutelayout" />

            </FrameLayout>
            <LinearLayout
                android:id="@+id/main_linearlayout_elearning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
