<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_layout_margin"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center">

            <Spinner
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:id="@+id/lecture_spinner_div"
                android:background="@drawable/square_white_bg"
                android:textAlignment="center"
                android:layout_marginEnd="10dp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/lecture_spinner_department"
                android:background="@drawable/square_white_bg"
                android:layout_marginEnd="10dp"
                android:layout_weight="1.0" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/lecture_spinner_info"
                android:background="@drawable/square_white_bg"
                android:layout_marginEnd="10dp"
                android:visibility="gone"
                android:layout_weight="1.0" />

            <Button
                android:layout_width="85dp"
                android:layout_height="40dp"
                android:id="@+id/lecture_button_condition"
                android:background="@drawable/square_white_bg"
                android:textSize="@dimen/default_text_size"
                android:text="@string/activity_lecture_button_condition"
                android:textColor="@android:color/black"
                android:onClick="onClicked" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/default_layout_margin"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:singleLine="true"
                android:id="@+id/lecture_edittext_lecturename"
                android:backgroundTint="@android:color/white"
                android:hint="@string/activity_lecture_edittext_lecture"
                android:textColorHint="@color/colorSecondary"
                android:textSize="@dimen/default_text_size"
                android:textColor="@android:color/white"
                android:layout_marginEnd="@dimen/default_layout_margin"
                android:inputType="text" />

            <Button
                android:layout_width="85dp"
                android:layout_height="40dp"
                android:id="@+id/lecture_button_lecturename"
                android:background="@drawable/square_white_bg"
                android:textSize="@dimen/default_text_size"
                android:text="@string/activity_lecture_button_lecturename"
                android:textColor="@android:color/black"
                android:onClick="onClicked" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_layout_margin"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/lecture_checkbox_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@android:color/white"
                android:text="@string/activity_lecture_checkbox_people"
                android:textSize="@dimen/default_text_size"
                android:textColor="@android:color/white" />

            <CheckBox
                android:id="@+id/lecture_checkbox_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@android:color/white"
                android:text="@string/activity_lecture_checkbox_time"
                android:textSize="@dimen/default_text_size"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="@dimen/default_layout_margin"
        android:layout_marginEnd="@dimen/default_layout_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_layout_margin"
            android:layout_marginTop="@dimen/default_layout_margin"
            android:text="@string/activity_lecture_textview_select_timetable"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/colorPrimary" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_bar_size"
            android:layout_marginTop="@dimen/default_layout_margin"
            android:background="@color/colorPrimary" />

        <ListView
            android:id="@+id/lecture_listview_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/default_layout_margin"
        android:layout_marginEnd="@dimen/default_layout_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_layout_margin"
            android:layout_marginTop="@dimen/default_layout_margin"
            android:text="@string/activity_lecture_textview_search_timetable"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/colorPrimary" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_bar_size"
            android:layout_marginTop="@dimen/default_layout_margin"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/lecture_textview_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/activity_lecture_textview_not_found"
            android:textSize="@dimen/default_text_size_large"
            android:textColor="@color/colorPrimary" />

        <ListView
            android:id="@+id/lecture_listview_lecture"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


</LinearLayout>